# aoc_2022

./: .gitattributes  Cargo.toml  README.md
assets/05/: input.txt
src/: day_01.rs  day_01_visualized.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  main.rs
