[package]
name = "aoc_2022"
version = "2.0.0"
authors = ["biancoSolutions <implimail@gmail.com>"]
edition = "2021"

[[bin]]
name = "main"
test = false
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
draw = "0.3.0"
cgmath = "0.17.0"
plotters = "0.3.1"
plotters-backend = "0.3.0"
crossterm = "0.22.1"
